# backend

./: .env  .env.example  .gitignore  INTEGRATION_GUIDE.md  OJT-AI-RAG-API-v2.postman_collection.json  OJT-AI-RAG-Local-v2.postman_environment.json  PROJECT_REPORT.md  Platform_Requirements_Report.md  README.md  STARTUP_GUIDE.md  docker-compose.yml  login.json  rag_answer_data.json  redis_data_check.txt  test_conversation.ps1  test_full_conversation.ps1  worker_output.txt
dockerfile-springboot/: .env  .env.example  Dockerfile  docker-compose.yml
dockerfile-springboot/.devcontainer/: devcontainer.json
ojt-ai-feature-ragworker/dockerfiles/.devcontainer/: devcontainer.json
ojt-ai-feature-ragworker/dockerfiles/rag-worker/compose/: .env  test-doc.txt  (+2 more)
ojt-ai-feature-ragworker/workspace/rag-worker/: CONTRACT.md
ojt-ai-feature-ragworker/workspace/rag-worker/rag-worker/: CMakeCache.txt  CMakeLists.txt  README.md
ojt-ai-feature-ragworker/workspace/rag-worker/rag-worker/src/: main.cpp  version.hpp
ojt-ai-feature-ragworker/workspace/rag-worker/rag-worker/src/chunk/: chunk.hpp  text_chunker.cpp  text_chunker.hpp
ojt-ai-feature-ragworker/workspace/rag-worker/rag-worker/src/config/: config.cpp  config.hpp
ojt-ai-feature-ragworker/workspace/rag-worker/rag-worker/src/db/: pg_client.cpp  pg_client.hpp
ojt-ai-feature-ragworker/workspace/rag-worker/rag-worker/src/embedding/: azure_chat_client.cpp  azure_chat_client.hpp  azure_embedder.cpp  azure_embedder.hpp
ojt-ai-feature-ragworker/workspace/rag-worker/rag-worker/src/http/: internal_server.cpp  internal_server.hpp
ojt-ai-feature-ragworker/workspace/rag-worker/rag-worker/src/mq/: kafka_consumer.cpp  kafka_consumer.hpp  kafka_producer.cpp  kafka_producer.hpp
ojt-ai-feature-ragworker/workspace/rag-worker/rag-worker/src/net/: http_client.cpp  http_client.hpp
ojt-ai-feature-ragworker/workspace/rag-worker/rag-worker/src/qdrant/: qdrant_client.cpp  qdrant_client.hpp
ojt-ai-feature-ragworker/workspace/rag-worker/rag-worker/src/service/: answer_service.cpp  answer_service.hpp  search_service.cpp  search_service.hpp
ojt-ai-feature-ragworker/workspace/rag-worker/rag-worker/src/storage/: minio_client.cpp  minio_client.hpp
ojt-ai-feature-ragworker/workspace/rag-worker/rag-worker/src/util/: log.cpp  log.hpp  time.cpp  time.hpp  uuid.cpp  uuid.hpp
ojt-ai-feature-ragworker/workspace/rag-worker/rag-worker/src/worker/: kafka_executor.cpp  kafka_executor.hpp
workspace/: pom.xml
workspace/component/: pom.xml
workspace/dependence/: pom.xml
workspace/ojt-ai-boot/: pom.xml
workspace/springboot-starter/: pom.xml
workspace/springboot-starter/starter-core/: pom.xml
workspace/springboot-starter/starter-flux/: pom.xml
workspace/springboot-starter/starter-security/: pom.xml
(+67 files in other folders)
